# simpleRulesComplexPatterns

./: README.md  index.html
cpp/: CMakeLists.txt
cpp/experiments/: CMakeLists.txt  example-ising.cpp
cpp/src/: ising.hpp  simplerules.hpp
css/: stuff.css
docs/: index.html  main.css
grayscott/: index.html
grayscott/js/: grayscott.js  reactionDiffusion.js
grayscott/shaders/: initializationFragmentShader.glsl  simulationFragmentShader.glsl
ising/: index.html
ising/shaders/: initializationFragmentShader.glsl  renderingFragmentShader.glsl  simulationFragmentShader.glsl  standardVertexShader.glsl
js/: grayscott.js  ising.js  reactionDiffusion.js
web/Site/: index.html
web/Sources/: Makefile  additional_ressources.rst  chaosgame.rst  howto.rst  index.rst  lsystems.rst  mandelbrot.rst  reactionDiffusion.rst  start_section.rst
webgl/grayscott/: index.html
webgl/grayscott/shaders/: initializationFragmentShader.glsl  renderingFragmentShader.glsl  simulationFragmentShader.glsl
webgl/ising/shaders/: initializationFragmentShader.glsl  simulationFragmentShader.glsl
webgl/js/: reactionDiffusion.js
